# upsurge_assignment

./: README.md
go2_description/: CMakeLists.txt  package.xml
go2_description/launch/: gazebo.launch.py  leg_display.launch.py
go2_description/worlds/: default.world
go2_description/xacro/: const.xacro  leg_ik.xacro  robot.xacro
quadrupled_control/: CMakeLists.txt  package.xml
quadrupled_control/src/: ik_service.cpp  path_follower.py  robot_controller.cpp
quadrupled_control/srv/: IKService.srv
